<resources>
    <string name="app_name">Soundrop</string>

    <!-- ActionBarDrawerToggle -->
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer Menu -->
    <string name="nav_explore">Explore</string>
    <string name="nav_discover">Discover</string>
    <string name="nav_library">Library</string>

    <string name="nav_other_label">Other</string>

    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_logout">Logout</string>

    <!-- Titles for Fragments-->
    <string-array name="nav_item_activity_titles">
        <item>Explore</item>
        <item>Discover</item>
        <item>Library</item>
    </string-array>

    <!-- Titles for Activities -->
    <string name="activity_title_settings">Settings</string>
    <string name="activity_title_about_us">About Us</string>

</resources>
