<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/explore_black"
            android:title="@string/nav_explore" />
        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/discover_black"
            android:title="@string/nav_discover" />
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/library_black"
            android:title="@string/nav_library" />
    </group>

    <item android:title="@string/nav_other_label">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu>